--- a/index.html
+++ b/index.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Controle de Produto</title>
+</head>
 <body>
+    
+    <h1>Controle de Produtos</h1>
+
+    <div>
+        <input type="text" id="descricao">
+        <input type="text" id="preco">
+        <button onclick="addProduto()" id="btnSalvar">Cadastrar Produto</button>
+    </div>
+    <hr>
     <table border="1">
         <tr>
             <th>Código</th>
             <th>Descrição do Produto</th>
             <th>Valor Produto</th>
+            <th>Opções</th>
         </tr>
         <tbody id="produtos"></tbody>
     </table>
 
-    <script>
-        let linha = ''
-        let produtos = [
-            {codigo: 1, descricao: 'Feijão Carioca 1kg', preco: 4.99 },
-            {codigo: 2, descricao: 'Sardinha 88 150g', preco: 6.99},
-        ]
-
-        produtos.push({codigo: 3, descricao: 'Pacote de Macarrão Estrela', preco: 2.59})
-
-        produtos.forEach(produto => linha +=`
-        <tr>
-        <td>${produto.codigo} </td>
-        <td>${produto.descricao}</td>
-        <td>R$ ${produto.preco.toFixed(2)}</td>
-        <tr>
-`)
-
-document.getElementById('produtos').innerHTML = linha
-
-    </script>
+    <script src="./tabela.js"></script>
 </body>
 </html>
