--- a/Categorias.html
+++ b/Categorias.html
@@ -33,7 +33,7 @@
         </nav>
     
         <div class="container">
-            <h1>Controle de Produtos</h1>
+            <h1>Listar categoria</h1>
 
             <div class="row">
                 <div class="col-md-4">
@@ -42,13 +42,13 @@
                 <div class="col-md-4">
                     <input type="text" id="preco" class="form-control">
                 </div>          
-                <button onclick="addProduto()" id="btnSalvar" class="col-md-4 btn btn-primary">Cadastrar Produto</button>
+                <button onclick="addProduto()" id="btnSalvar" class="col-md-4 btn btn-primary">Cadastrar Categoria</button>
             </div>
             <hr>
             <table border="1" class="table table-striped table-dark">
                 <tr>
                     <th>Código</th>
-                    <th>Descrição do Produto</th>
+                    <th>Descrição do Categoria</th>
                     <th>Valor Produto</th>
                     <th>Opções</th>
                 </tr>
@@ -56,7 +56,7 @@
             </table>
         </div>
 
-    <script src="./tabela.js"></script>
+    <script src="./categoria.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
