--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <table border="1" class="table table-striped table-dark">
                 <tr>
                     <th>Código</th>
-                    <th>Descrição do Produto</th>
+                    <th>Descrição do PRoduto</th>
                     <th>Valor Produto</th>
                     <th>Opções</th>
                 </tr>
