--- a/Categorias.html
+++ b/Categorias.html
@@ -36,12 +36,9 @@
             <h1>Listar categoria</h1>
 
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-8">
                     <input type="text" id="descricao" class="form-control">
-                </div>
-                <div class="col-md-4">
-                    <input type="text" id="preco" class="form-control">
-                </div>          
+                </div>      
                 <button onclick="addProduto()" id="btnSalvar" class="col-md-4 btn btn-primary">Cadastrar Categoria</button>
             </div>
             <hr>
@@ -50,7 +47,7 @@
                     <th>Código</th>
                     <th>Descrição do Categoria</th>
                 </tr>
-                <tbody id="produtos"></tbody>
+                <tbody id="categorias"></tbody>
             </table>
         </div>
 
