--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <table border="1" class="table table-striped table-dark">
                 <tr>
                     <th>Código</th>
-                    <th>Descrição do PRoduto</th>
+                    <th>Descrição do Produto</th>
                     <th>Valor Produto</th>
                     <th>Opções</th>
                 </tr>
@@ -56,7 +56,7 @@
             </table>
         </div>
 
-    <script src="./tabela.js"></script>
+    <script src="./categoria.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
